--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -2,7 +2,19 @@
     font-weight: bold;
 }
 
-a, a:hover {
+.navLink {
+    font-size: 18px;
+}
+
+.leftNavContainer {
+    padding: 20px;
+    position: fixed;
+    height: 100%;
+    width: 200px;
+    background-color: #f0f0f0;
+}
+
+a, a:hover, a:active {
     text-decoration: none;
     color: black;
 }
@@ -10,4 +22,5 @@ a, a:hover {
 li {
     list-style-type: none;
     margin: 0px;
+    padding: 0px;
 }
